erDiagram

    users {
        UUID id PK
        VARCHAR(255) email
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
    }

    auth_users {
        UUID id PK, FK
        TEXT hashed_password
    }

    auth_sessions {
        UUID id PK
        UUID user_id FK
        TEXT refresh_token_hash
        INET ip_address
        TIMESTAMPTZ expires_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ revoked_at
    }

    user_profiles {
        UUID id PK, FK
        VARCHAR(100) name
        INTEGER rating
    }

    categories {
        UUID id PK
        VARCHAR(128) name
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    listings {
        UUID id PK
        UUID seller_id FK
        UUID category_id FK
        VARCHAR(255) title
        TEXT description
        VARCHAR(32) condition
        INTEGER price
        TEXT[] images
        VARCHAR(255) location
        VARCHAR(32) status
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    listing_status_history {
        UUID id PK
        UUID listing_id FK
        VARCHAR(32) from_status
        VARCHAR(32) to_status
        TIMESTAMPTZ changed_at
    }

    user_listing_interaction {
        UUID id PK
        UUID user_id FK
        UUID listing_id FK
        INTEGER interaction_count
        TIMESTAMPTZ first_interaction_at
        TIMESTAMPTZ last_interaction_at
    }

    purchases {
        UUID id PK
        UUID listing_id FK
        UUID buyer_id FK
        INTEGER price_at_purchase
        TIMESTAMPTZ purchased_at
    }

    users ||--|| auth_users : "has credentials"
    users ||--o{ auth_sessions : "has sessions"
    users ||--|| user_profiles : "has profile"
    users ||--o{ listings : "publishes"
    users ||--o{ user_listing_interaction : "interacts"
    categories ||--o{ listings : "classifies"
    listings ||--o{ listing_status_history : "tracks state changes"
    listings ||--o{ user_listing_interaction : "records user events"
    users ||--o{ purchases : "buys"
    listings ||--o| purchases : "sold via"
